--- a/css/pagestyles.css
+++ b/css/pagestyles.css
@@ -15,7 +15,7 @@ body {font: 14px sans-serif; background-color: #e7e7e7; color: #141C07;}
     left: -0.21%;
     right: 0%;
     top: 0px;
-    background: #C70800;
+    background: #ADB5BD;
 }
 
 .back-icon img {
@@ -49,7 +49,7 @@ body {font: 14px sans-serif; background-color: #e7e7e7; color: #141C07;}
 }
 
 .edituserblock {
-    background-color: #fff;
+    background-color: #DEE2E6;
     border-radius: 10px;
     padding: 20px;
     width: 400px;
