--- a/css/pagestyles.css
+++ b/css/pagestyles.css
@@ -75,7 +75,7 @@ label {
 }
 
 .btn-primary {
-    background-color: #C70800;
+    background-color: #212529;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -84,7 +84,7 @@ label {
 .btn-secondary {
     background-color: #fff;
     color: #2C2A3A;
-    border: 1px solid #C70800;
+    border: 1px solid #212529;
     border-radius: 5px;
 }
 
@@ -92,7 +92,7 @@ label {
 .btn-secondary:hover,
 .btn-primary:focus,
 .btn-secondary:focus {
-    background-color: #8e0001;
+    background-color: #212529;
     color: #fff;
 }
 
@@ -143,20 +143,20 @@ label {
     margin-right: 10px;
     border-radius: 5px;
     width: 70px;
-    background-color: #C70800;
+    background-color: #212529;
 }
 
 .btn-border {
     background-color: #fff;
     color: #2C2A3A;
-    border: 1px solid #C70800;
+    border: 1px solid #212529;
     border-radius: 5px;
     padding: 3px 10px;
     margin-left: 15px;
 }
 
 .btn-border:hover {
-    background-color: #8e0001;
+    background-color: #212529;
     color: #fff;
 }
 
@@ -169,12 +169,12 @@ label {
 }
 
 .btn-solid:hover {
-    background-color: #C70800;
+    background-color: #212529;
     color: #fff;
 }
 
 .btn-red {
-    background-color: #C70800;
+    background-color: #212529;
     color: #fff;
     border-radius: 5px;
     padding: 3px 10px;
@@ -182,6 +182,6 @@ label {
 }
 
 .btn-red:hover {
-    background-color: #8e0001;
+    background-color: #212529;
     color: #fff;
 }
