--- a/css/header-responsive.css
+++ b/css/header-responsive.css
@@ -137,3 +137,23 @@ a {
 .link-style:hover {
     color: #2C293A;
 }
+.topbar .navbar-collapse .navbar-nav .app-search .form-control {
+    border: none;
+    font-size: 13px;
+    color: #4c5667;
+    padding-left: 20px;
+    padding-right: 40px;
+    background: rgba(255,255,255,0.9);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    height: 30px;
+    font-weight: 600;
+    width: 180px;
+    display: inline-block;
+    line-height: 30px;
+    margin-top: 15px;
+    border-radius: 40px;
+    -webkit-transition: 0.5s ease-out;
+    -o-transition: 0.5s ease-out;
+    transition: 0.5s ease-out;
+}
