--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p {
     color: #d8d8d8;
 
 }
-.btn {
+.btn1 {
     background-color: rgb(210, 88, 31);
     margin-top: 20px;
     padding: 15px 45px;
