--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ p {
     background-size: 200% auto;
     box-shadow: 3px 8px 22px rgba(22,21,21,.15);
 }
-.btn:hover {
+.btn1:hover {
     transform: scale(1.1);
     transition: all .5s;
 
