--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,6 @@
 
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-
-}
-.navbar {
-    width: 100%;
-    height: 15vh;
-    margin: auto;
-    display: flex;
-    align-items: center;
-}
+* 
 .logo {
     width: 180px;
     margin-top: 10px;
