--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 
 
 * 
+body {
+  
+    background: #DEE2E6;
+  }
 .logo {
     width: 180px;
     margin-top: 10px;
@@ -9,7 +13,7 @@
 }
 nav ul li a {
     text-decoration: none;
-    color: #ffffff;
+    color: #6C757D;
     text-transform: uppercase;
     font-size: 15px;
     font-weight: 600;
@@ -24,10 +28,11 @@ h1 {
     margin-top: 100px;
     letter-spacing: .1em;
     font-size: 70px;
-    color: #f5f4f4;
+    color: #212529;
+    font-family: 'Lobster', cursive;
 }
 h1 .style {
-    color: rgb(145, 147, 142);
+    color: rgb(33, 37, 41);
     font-size: 80px;
     font-weight: 800;
     font-family: 'Lobster', cursive;
@@ -39,7 +44,7 @@ p {
     font-weight: 600;
     letter-spacing: .1em;
     margin-top: 35px;
-    color: #d8d8d8;
+    color: #212529;
 
 }
 .btn1 {
@@ -69,10 +74,10 @@ p {
 .image {
     position: absolute;
    
-    height: 47%;
+    height: 50%;
     bottom: 0;
     margin-bottom: 170px;
-    margin-left: 830px;
+    margin-left: 1000px;
     scale: 1.93;
     
 }
