--- a/css/header-responsive.css
+++ b/css/header-responsive.css
@@ -34,7 +34,7 @@ body{
     font-weight: 500;
     font-family: Readex Pro;
     background-color: #ffffff;
-    
+    color: #212529;
     border: #ffffff;   
     box-shadow: 0px 4px 4px #00000040; 
 }
